fix(VideoModal.js, IframeModal.js): Fixed sizing for both iframe and video modals on mobile.

--- a/client/src/styles/layout/_modal.scss
+++ b/client/src/styles/layout/_modal.scss
@@ -1,7 +1,7 @@
 .modal-background {
   position: fixed;
   display: grid;
-  min-height: 90vh;
+  min-height: 100vh;
   width: 100vw;
   margin: 0;
   bottom: 0;
@@ -12,17 +12,20 @@
 
 .image-modal {
   display: grid;
-  justify-content: center;
+  justify-self: center;
   align-self: center;
-  min-height: 100vh;
+  max-height: 90vh;
+  height: 80%;
+  max-width: 90vw;
+  width: 80%;
   z-index: 2;
   cursor: pointer;
 
   video {
     position: relative;
-    max-height: 100vh;
+    max-height: 85vh;
     height: 100%;
-    max-width: 90vw;
+    max-width: 95vw;
     width: 100%;
   }
 
